--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "mycalculator",
+  "homepage":"https://maryam032.github.io/calc",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "mathjs": "^6.0.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
@@ -11,7 +13,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -27,5 +31,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.1.0"
   }
 }
